# paint-by-words

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  common.package.json  lerna.json  netlify.toml  package.json  tsconfig.json
client/: .eslint.js  .prettier.js  BUILD.bazel  client.package.json  package.json  tsconfig.json
client/components/: connection.tsx  current-user.tsx  game-board.tsx  game-client.tsx  game.tsx  layout.tsx  register.tsx  reverse-u32.ts
client/lib/: client.tsx  draw-grid.ts  throttle.ts
client/pages/: connection.tsx  game-client.tsx  index.tsx
client/src/: app.ts  chat.ts  client.ts  game-board.ts  getDocumentFromTemplate.ts  index.html  index.scss  index.ts  node.d.ts  throttle.ts
client/src/interfaces/: typed-event.ts
core/: BUILD.bazel  core.package.json  index.ts  package.json  tsconfig.json
core/src/: login.message.ts  message.ts  messages.ts  player.ts
protobuf/: index.d.ts  index.js  index.proto  package.json
protos/: BUILD.bazel  index.d.ts  index.proto  message-type.ts  protos.package.json
server/: BUILD.bazel  package.json  server.package.json  tsconfig.json
server/src/: index.ts  room.tsx
tools/: parcel.bzl
tools/json-merge/: BUILD.bazel  index.ts
