load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("//tools/npm:package.bzl", "dataform_npm_package")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "core",
    srcs = glob(["**/*.ts"]),
    module_name = "@pbw/core",
    deps = [
        "//protos",
        "@npm//@types/node",
    ],
)

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "core.package.json",
    ],
    deps = [":core"],
)
