package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "protos",
    srcs = glob(["**/*.ts"]),
    module_name = "@pbw/messages",
    deps = [
        "@npm//google-protobuf",
        "@npm//@types/google-protobuf",
        "@npm//ts-protoc-gen",
        "@npm//@types/node"
    ],
)

load("//tools/npm:package.bzl", "dataform_npm_package")

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "protos.package.json",
    ],
    deps = [":protos"],
)
