load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("//tools/npm:package.bzl", "dataform_npm_package")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "protos",
    srcs = glob(["**/*.ts"]),
    module_name = "@pbw/messages",
    deps = [
        "@npm//@types/google-protobuf",
        "@npm//@types/node",
        "@npm//google-protobuf",
        "@npm//ts-protoc-gen",
    ],
)

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "protos.package.json",
    ],
    deps = [":protos"],
)
