package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "server",
    srcs = glob(["**/*.ts"]),
    module_name = "@pbw/server",
    deps = [
        "//core",
        "//protos",
        "@npm//@types/ws",
        "@npm//@sentry/node",
        "@npm//ws",
        "@npm//@types/node",
    ],
)

load("//tools/npm:package.bzl", "dataform_npm_package")

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "server.package.json",
    ],
    deps = [":server"],
)
