load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("//tools/npm:package.bzl", "dataform_npm_package")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "server",
    srcs = glob(["**/*.ts"]),
    module_name = "@pbw/server",
    deps = [
        "//core",
        "//protos",
        "@npm//@sentry/node",
        "@npm//@types/node",
        "@npm//@types/ws",
        "@npm//ws",
    ],
)

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "server.package.json",
    ],
    deps = [":server"],
)
